// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error component renders correctly with a raw error string 1`] = `
<View
  style={
    [
      {
        "alignSelf": "center",
        "borderRadius": 15,
        "marginBottom": 10,
        "padding": 10,
        "width": 600,
      },
      {
        "backgroundColor": "rgba(179, 38, 30, 1)",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "textAlign": "center",
        },
        {
          "color": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    This is an error
  </Text>
</View>
`;

exports[`Error component renders correctly with a translation key 1`] = `
<View
  style={
    [
      {
        "alignSelf": "center",
        "borderRadius": 15,
        "marginBottom": 10,
        "padding": 10,
        "width": 600,
      },
      {
        "backgroundColor": "rgba(179, 38, 30, 1)",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "textAlign": "center",
        },
        {
          "color": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    translated:errors.login_failed
  </Text>
</View>
`;
